# slsengine

./: .gitignore  .gitmodules  .tags  .tags_sorted_by_file  CMakeLists.txt  LICENSE  Makefile  README.md  slsengine.sublime-project  slsengine.sublime-workspace
.kscope/: cscope.files  project.conf
assets/: grid.frag.glsl  grid.vert.glsl
content/: s.frag  s.vert
cscope/: cscope.files
demosrc/: main.c
include/srengine/: linmath.h  loadcontent.h  renderwindow.h  scene.h  scenemgr.h  slengine.h  sprite.h  types.h  window.h
lib/: SLSDATA_NAME
src/: .tags  .tags_sorted_by_file  common.h  main.c  results.h  setup.h~  shaderutils.c  shaderutils.h  sls-geometry.c  sls-geometry.h  sls-nuklear.c  sls-nuklear.h  slsapp.c  slsapp.h  slsengine.h  slsmacros.h  slsmath.c  slsmath.h  slsrenderer.c  slsrenderer.h  stdhdr.h  types.h
src/ComponentEntity/: .cproject  .project  component-entity.h  componententity.h  sls-component-transform.h  sls-entity-table.c  sls-entity-table.h  sls-world.c  sls-world.h
src/demo/: CMakeLists.txt  main.c
src/desktop/: desktop-app.c
src/ecs/: components.h  slsworld.c  slsworld.h
src/emscripten/: em-app.c
src/game/: behavior.c  behavior.h  paddle.c  paddle.h
src/gl/: shaderutils.c  sls-gl.h  sls-mesh.c  sls-mesh.h  sls-shader.c  sls-shader.h
src/graphics/: graphics.h  sls-content.c  sls-content.h  sls-sprite.c  sls-sprite.h
src/linalg/: component-entity.h  sls-transform2d.h  vectypes.h
src/macros/: applyall.h  dbg.h  macros.h  types.h
src/slsdata/: .tags  .tags_sorted_by_file  sls-array.c  sls-array.h  slsdata-hdr.h
src/slsengine/: CMakeLists.txt  setup.c  setup.h  slsengine.h  stdhdr.h  types.h
src/slsengine/ComponentEntity/: sls-entity-table.c  sls-entity-table.h
src/slsengine/gl/: .tags  .tags_sorted_by_file  shaderutils.h  sls-gl.h  sls-mesh.c  sls-mesh.h
src/slsengine/graphics/: graphics.h  sls-cont-container.c  sls-cont-container.h  sls-content.c  sls-content.h  sls-shader.c  sls-shader.h  sls-sprite.c  sls-sprite.h
src/slsengine/linalg/: sls-mat4.c  sls-mat4.h  vectypes.c  vectypes.h
src/slsengine/macros/: macros.h
src/slsengine/window/: sls-clock.c  sls-clock.h  sls-gamewindow.c  sls-gamewindow.h  sls-glwindow.c  sls-glwindow.h  sls-mainscene.c  sls-mainscene.h  sls-statestack.c  sls-statestack.h  sls-window.c  sls-window.h  window.h
src/tests/: CMakeLists.txt  component-test.c  content-test.c  main.c  math-tests.c  mesh-test.c  statestack-test.c
src/window/: sls-game-window.c  sls-game-window.h  sls-glwindow.c  sls-glwindow.h  sls-window.c  sls-window.h  window.h
tests/: component-test.c  component-test.h  content-test.c  content-test.h  generate_vectors.py  main.c  math-tests.c  math-tests.cpp  math-tests.h  math.c  mesh-test.c  window-test.c  window-test.h
